# agentic-compliance-workflow

./: README.md  pyproject.toml
src/agents/compliance/: main.py
src/agents/ingestion/: main.py  triggerIngestion.py
src/infra/: main.tf  provider.tf  variables.tf
src/infra/envs/dev/: dev.auto.tfvars  main.tf  variables.tf
src/infra/modules/iam/: iam.tf  outputs.tf
src/infra/modules/lambda/: lambda.tf  outputs.tf
src/infra/modules/s3/: s3.tf
src/infra/modules/stepfunctions/: stepfunctions.tf
src/infra/step-functions/: definition.asl.json
src/scripts/: trigger_compliance_local.py  trigger_ingestion_local.py
tests/: test_smoke.py
