[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-complaince-automation"
version = "0.1.0"
description = "Scaffolded project for agentic compliance automation"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Your Name" } ]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
